# Home_Energy

./: .gitignore  01_Load_Data.py  01_Load_Recent_Data.py  Pipfile  README.md  Station Inventory EN JCB.xlsx  pyproject.toml
